--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </li>
                     <li>
                         <span class="icon">📄</span>
-                        <a href="https://drive.google.com/drive/folders/1gAgc_8F105bsm8nVj1fg6aQDAGfBryJ0?usp=drive_link" target="_blank">Link de download dos Hinos</a>
+                        <a href="https://drive.google.com/drive/folders/1gAgc_8F105bsm8nVj1fg6aQDAGfBryJ0?usp=drive_link" target="_blank">Link de download dos hinos</a>
                     </li>
                     <li>
                         <span class="icon">▶️</span>
@@ -66,4 +66,5 @@
     </div>
 
 </body>
+
 </html>
