--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </li>
                     <li>
                         <span class="icon">📄</span>
-                        <a href="https://drive.google.com/file/d/1zYMAfAX2rGIgXUIWy7BNUJ3zP88kr48M/view?usp=drive_link" target="_blank">Baixe o "NovoHinarioAdventista.exe" por aqui</a>
+                        <a href="https://drive.google.com/file/d/1zYMAfAX2rGIgXUIWy7BNUJ3zP88kr48M/view?usp=drive_link" target="_blank">Baixe o "NovoHinarioAdventista.exe" por este link e coloque em algum lugar do seu Windows onde será a pasta raiz do Hinário</a>
                     </li>
                     <li>
                         <span class="icon">📄</span>
@@ -68,3 +68,4 @@
 </body>
 
 </html>
+
