--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </section>
 
             <section class="directory-list">
-                <h2>Diretório: 📁 HinarioAdventista</h2>
+                <h2>Diretório: 📁 HinarioAdventista <<< Deixe exatamente este nome</h2>
                 <ul>
                     <li>
                         <span class="icon">🖼️</span>
@@ -68,5 +68,6 @@
 </body>
 
 </html>
+
 
 
