--- a/index.html
+++ b/index.html
@@ -61,13 +61,14 @@
         </main>
 
         <footer>
-            <p>feito por <a href="https://danielmoreiraprogramador.github.io/quemsoueu/" target="_blank">@danielmoreiraprogramador</a></p>
+            <p>Desenvolvido por <a href="https://danielmoreiraprogramador.github.io/quemsoueu/" target="_blank">@danielmoreiraprogramador</a></p>
         </footer>
     </div>
 
 </body>
 
 </html>
+
 
 
 
