--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </li>
                     <li>
                         <span class="icon">📄</span>
-                        <a href="https://danielmoreiraprogramador.github.io/quemsoueu/" target="_blank">Minhas redes sociais, caso tenha alguma dúvida</a>
+                        <a href="https://danielmoreiraprogramador.github.io/QuemSouEu/" target="_blank">Minhas redes sociais, caso tenha alguma dúvida</a>
                     </li>
                 </ul>
             </section>
@@ -68,6 +68,7 @@
 </body>
 
 </html>
+
 
 
 
