--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </li>
                     <li>
                         <span class="icon">📄</span>
-                        <a href="https://danielmoreiraprogramador.github.io/QuemSouEu/" target="_blank">Minhas redes sociais, caso tenha alguma dúvida</a>
+                        <a href="https://danielbuenomoreira.github.io/QuemSouEu/" target="_blank">Minhas redes sociais, caso tenha alguma dúvida</a>
                     </li>
                 </ul>
             </section>
@@ -61,13 +61,14 @@
         </main>
 
         <footer>
-            <p>Desenvolvido por <a href="https://danielmoreiraprogramador.github.io/QuemSouEu/" target="_blank">@danielmoreiraprogramador</a></p>
+            <p>Desenvolvido por <a href="https://danielbuenomoreira.github.io/QuemSouEu/" target="_blank">@danielmoreiraprogramador</a></p>
         </footer>
     </div>
 
 </body>
 
 </html>
+
 
 
 
