--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </li>
                     <li>
                         <span class="icon">📄</span>
-                        <a href="https://github.com/danielbuenomoreira/NovoHinarioAdventista/releases" target="_blank">Baixe o "NovoHinarioAdventista.exe" por este link e cole em algum lugar<br>do seu Windows onde será a pasta raiz do Hinário</a>
+                        <a href="https://github.com/danielbuenomoreira/NovoHinarioAdventista/releases/download/1.0/NovoHinarioAdventista.exe" target="_blank">Baixe o "NovoHinarioAdventista.exe" por este link e cole em algum lugar<br>do seu Windows onde será a pasta raiz do Hinário</a>
                     </li>
                     <li>
                         <span class="icon">📄</span>
@@ -68,6 +68,7 @@
 </body>
 
 </html>
+
 
 
 
