Clean up index.html and fix formatting issues
Removed extra whitespace and ensured proper HTML structure.

--- a/index.html
+++ b/index.html
@@ -61,13 +61,14 @@
         </main>
 
         <footer>
-            <p>Desenvolvido por <a href="https://danielbuenomoreira.github.io/QuemSouEu/" target="_blank">@danielmoreiraprogramador</a></p>
+            <p>Desenvolvido por <a href="https://danielbuenomoreira.github.io/QuemSouEu/" target="_blank">@danielbuenomoreira</a></p>
         </footer>
     </div>
 
 </body>
 
 </html>
+
 
 
 
